# Board-Meeting-Insights

./: README.md  asr_processor.py  caption_downloader.py  config.py  main.py  pyproject.toml  rag_interface.py  transcript_cleaner.py  vector_database.py  verify_env.py  video_collection.py  youtube_discovery.py
captions/central_texas_college/clean/: 0M-pZNWSJ5w.txt  18f_q61dw_Q.en.txt  3Ae0-2z4m3k.en.txt  4us8Njh2wXA.en.txt  FBufnBgl1Cg.en.txt  LSSYVOqcVv4.txt  PPsqW5OlGEE.en.txt  RStk28I9nRc.txt  XK5TwTCUSWM.txt  kPb6SZcWoNA.txt  tv9qL3Dz5gM.en.txt  vNgLIg1LzEw.txt  w29cI-SCeHI.en.txt
captions/central_texas_college/pure/: 0M-pZNWSJ5w.txt  18f_q61dw_Q.en.txt  3Ae0-2z4m3k.en.txt  4us8Njh2wXA.en.txt  FBufnBgl1Cg.en.txt  LSSYVOqcVv4.txt  PPsqW5OlGEE.en.txt  RStk28I9nRc.txt  XK5TwTCUSWM.txt  kPb6SZcWoNA.txt  tv9qL3Dz5gM.en.txt  vNgLIg1LzEw.txt  w29cI-SCeHI.en.txt
captions/central_texas_college/raw/: 0M-pZNWSJ5w.vtt  18f_q61dw_Q.en.vtt  3Ae0-2z4m3k.en.vtt  4us8Njh2wXA.en.vtt  FBufnBgl1Cg.en.vtt  LSSYVOqcVv4.vtt  PPsqW5OlGEE.en.vtt  RStk28I9nRc.vtt  XK5TwTCUSWM.vtt  kPb6SZcWoNA.vtt  tv9qL3Dz5gM.en.vtt  vNgLIg1LzEw.vtt  w29cI-SCeHI.en.vtt
captions/el_paso_community_college/clean/: 1JEjyq5oJL8.en.txt  2lCWBWyzDm0.en.txt  3beS_0_aDyQ.en.txt  5WCV4tmzT18.en.txt  9YcoA_UgxVY.txt  AqL0U8Waj0Q.en.txt  BXue4MDXOgs.en.txt  E_ZZVsqvXjo.en.txt  FHm0S4psw2o.en.txt  MLV3PseqzHs.en.txt  SQGjayZa1Kk.en.txt  ZdI16Bri55c.en.txt  (+3 more)
chromadb_storage/: chroma.sqlite3
data/: asr_failed.csv  caption_Failed.csv  cleaning_failed.csv  school_IDs.csv  video_List.csv  video_Rejected.csv
(+54 files in other folders)
